modified the DoctorScheduleServiceImp too use ViewDoctorScheduleService DTO