@@ -1,41 +1,40 @@
 package com.davis.hospital_Appointment_Rest_API.service.imp;
 
-import java.awt.print.Pageable;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
+import com.davis.hospital_Appointment_Rest_API.dto.ViewDoctorSchedule;
 import com.davis.hospital_Appointment_Rest_API.model.DoctorSchedule;
 import com.davis.hospital_Appointment_Rest_API.repository.DoctorScheduleRepository;
 import com.davis.hospital_Appointment_Rest_API.service.DoctorScheduleService;
 
 /**
- * Implementation of the {@link DoctorScheduleService} interface providing
- * business logic for doctor schedule management.
+ * Service implementation for doctor schedule management operations.
  * <p>
- * This service handles operations related to doctor schedules including:
+ * Provides business logic for managing doctor schedules including creation, retrieval,
+ * and search functionality. Implements the {@link DoctorScheduleService} interface.
+ *
+ * <p><b>Key Responsibilities:</b>
  * <ul>
- *   <li>CRUD operations for doctor schedules</li>
- *   <li>Search functionality by various criteria</li>
- *   <li>Calculation of available appointment slots</li>
+ *   <li>Managing CRUD operations for doctor schedules</li>
+ *   <li>Calculating available appointment slots</li>
+ *   <li>Searching schedules by various criteria</li>
+ *   <li>Converting entities to DTOs for API responses</li>
  * </ul>
  * </p>
- * 
+ *
  * @author CYPRIAN DAVIS
  * @version 1.0
  * @since 2025-07-06
  * @see DoctorScheduleService
  * @see DoctorScheduleRepository
- * @see DoctorSchedule
  */
 @Service
 public class DoctorScheduleServiceImp implements DoctorScheduleService {
@@ -44,9 +43,9 @@ public class DoctorScheduleServiceImp implements DoctorScheduleService {
     private DoctorScheduleRepository doctorScheduleRepository;
 
     /**
-     * Retrieves all doctor schedules from the database.
+     * Retrieves all doctor schedules from the repository.
      *
-     * @return List of all doctor schedules
+     * @return List of all {@link DoctorSchedule} entities
      */
     @Override
     public List<DoctorSchedule> findAll() {
@@ -54,14 +53,17 @@ public class DoctorScheduleServiceImp implements DoctorScheduleService {
     }
 
     /**
-     * Saves a doctor schedule to the database.
+     * Persists a doctor schedule to the database.
      * <p>
-     * Automatically calculates available slots and sets creation timestamp
-     * before saving.
-     * </p>
+     * Performs the following operations before saving:
+     * <ul>
+     *   <li>Validates the schedule is not null</li>
+     *   <li>Calculates available appointment slots</li>
+     *   <li>Sets creation timestamp</li>
+     * </ul>
      *
-     * @param schedule The doctor schedule to save
-     * @return The saved doctor schedule
+     * @param schedule The doctor schedule to persist
+     * @return The persisted {@link DoctorSchedule} entity
      * @throws IllegalArgumentException if schedule is null
      */
     @Override
@@ -71,93 +73,72 @@ public class DoctorScheduleServiceImp implements DoctorScheduleService {
         }
         
         schedule.setAvailableSlots(calculateAvailableSlots(schedule.getStartTime(), schedule.getEndTime()));
-        LocalDateTime now = LocalDateTime.now();
-        schedule.setCreatedOn(now);
+        schedule.setCreatedOn(LocalDateTime.now());
         
         return doctorScheduleRepository.save(schedule);
     }
 
     /**
-     * Finds schedules by doctor specialization.
+     * Retrieves schedules by doctor specialization.
      *
-     * @param specialization The medical specialization to search for
-     * @return List of matching doctor schedules
+     * @param specialization The medical specialization to filter by (e.g., "Cardiology")
+     * @return List of matching {@link ViewDoctorSchedule} DTOs
      * @throws IllegalArgumentException if specialization is null or empty
      */
     @Override
-    public List<DoctorSchedule> findByDoctorSpecialization(String specialization) {
-        if (specialization == null || specialization.trim().isEmpty()) {
-            throw new IllegalArgumentException("Specialization cannot be null or empty");
-        }
-        return doctorScheduleRepository.findByDoctorSpecialization(specialization);
+    public List<ViewDoctorSchedule> findByDoctorSpecialization(String specialization) {
+        return doctorScheduleRepository.findDtoByDoctorSpecialization(specialization);
     }
 
     /**
-     * Performs a paginated comprehensive search of doctor schedules.
-     *
-     * @param pageable Pagination information
-     * @return Page of doctor schedules
-     */
-    @Override
-    public Page<DoctorSchedule> comprehensiveSearchPaginated(Pageable pageable) {
-        return null; // Implementation pending
-    }
-
-    /**
-     * Searches for doctor schedules by doctor name.
+     * Searches schedules by doctor name using case-insensitive matching.
      * <p>
-     * Supports multi-term search by finding intersection of all term matches.
-     * </p>
+     * The search matches against all name components (surname, given name) and
+     * returns results sorted alphabetically by doctor name.
      *
-     * @param name The name or name parts to search for
-     * @return List of matching doctor schedules
+     * @param name The name or partial name to search for
+     * @return List of matching {@link ViewDoctorSchedule} DTOs, sorted by doctor name
      * @throws IllegalArgumentException if name is null or empty
      */
     @Override
-    public List<DoctorSchedule> searchByDoctorName(String name) {
+    public List<ViewDoctorSchedule> searchByDoctorName(String name) {
         if (name == null || name.trim().isEmpty()) {
             throw new IllegalArgumentException("Name parameter cannot be null or empty");
         }
-        
-        String[] terms = name.trim().split("\\s+");
-        
-        List<List<DoctorSchedule>> allMatches = Arrays.stream(terms)
-                .map(doctorScheduleRepository::searchByDoctorName)
-                .toList();
-                
-        return allMatches.stream()
-                .reduce((list1, list2) -> {
-                    Set<DoctorSchedule> set = new HashSet<>(list2);
-                    return list1.stream()
-                            .filter(set::contains)
-                            .toList();
-                })
-                .orElse(Collections.emptyList());
+
+        return doctorScheduleRepository.searchDtoByDoctorName(name)
+                .stream()
+                .filter(schedule -> schedule.getDoctorName() != null && !schedule.getDoctorName().isEmpty())
+                .sorted(Comparator.comparing(ViewDoctorSchedule::getDoctorName))
+                .collect(Collectors.toList());
     }
 
     /**
-     * Finds schedules by day of week.
+     * Retrieves schedules by day of week.
      *
-     * @param day The day of week to search for (e.g., "Monday")
-     * @return List of matching doctor schedules
+     * @param day The day of week to filter by (e.g., "Monday")
+     * @return List of matching {@link ViewDoctorSchedule} DTOs
      * @throws IllegalArgumentException if day is null or empty
      */
     @Override
-    public List<DoctorSchedule> findByDayOfWeek(String day) {
-        if (day == null || day.trim().isEmpty()) {
-            throw new IllegalArgumentException("Day parameter cannot be null or empty");
-        }
-        return doctorScheduleRepository.findByDayOfWeek(day);
+    public List<ViewDoctorSchedule> findByDayOfWeek(String day) {
+        return doctorScheduleRepository.findDtoByDayOfWeek(day);
     }
     
     /**
-     * Calculates the number of available 20-minute appointment slots
-     * between start and end times, accounting for appropriate breaks.
+     * Calculates available appointment slots between two times.
+     * <p>
+     * Each slot is assumed to be 20 minutes long. Deducts appropriate break times
+     * based on schedule duration.
      *
-     * @param startTime The schedule start time
-     * @param endTime The schedule end time
-     * @return Number of available appointment slots
-     * @throws IllegalArgumentException if times are null or invalid
+     * @param startTime The schedule start time (required)
+     * @param endTime The schedule end time (required)
+     * @return Number of available 20-minute appointment slots
+     * @throws IllegalArgumentException if:
+     *         <ul>
+     *           <li>Either time parameter is null</li>
+     *           <li>Start time is after end time</li>
+     *         </ul>
      */
     private int calculateAvailableSlots(LocalTime startTime, LocalTime endTime) {
         if (startTime == null || endTime == null) {
@@ -169,36 +150,28 @@ public class DoctorScheduleServiceImp implements DoctorScheduleService {
         
         long totalMinutes = Duration.between(startTime, endTime).toMinutes();
         long breakMinutes = calculateBreakMinutes(totalMinutes);
-        long availableMinutes = totalMinutes - breakMinutes;
-        
-        return (int) (availableMinutes / 20);
+        return (int) ((totalMinutes - breakMinutes) / 20);
     }
 
     /**
-     * Calculates total break time based on schedule duration.
+     * Determines break duration based on total schedule length.
      * <p>
-     * Break logic:
+     * Break policy:
      * <ul>
-     *   <li>No breaks for schedules under 3 hours</li>
-     *   <li>15-minute break for schedules 3-6 hours</li>
-     *   <li>45 minutes total breaks (30 lunch + 15 breakfast) for schedules over 6 hours</li>
+     *   <li>Less than 3 hours: No breaks</li>
+     *   <li>3-6 hours: 15 minute break</li>
+     *   <li>Over 6 hours: 45 minutes total breaks</li>
      * </ul>
-     * </p>
      *
      * @param totalMinutes Total schedule duration in minutes
      * @return Total break time in minutes
      */
     private long calculateBreakMinutes(long totalMinutes) {
-        long breakMinutes = 0;
-        
         if (totalMinutes > 360) { // >6 hours
-            breakMinutes += 30; // Lunch break
-            breakMinutes += 15; // Breakfast break
+            return 45;
+        } else if (totalMinutes >= 180) { // 3-6 hours
+            return 15;
         }
-        else if (totalMinutes >= 180) { // 3-6 hours
-            breakMinutes += 15; // Single break
-        }
-        
-        return breakMinutes;
+        return 0;
     }
 }
